--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,8 +1,8 @@
 /* Color Variables */
 :root {
-  /* Primary Colors */
-  --primary-color: #fd5634;
-  --secondary-color: #f7bf39;
+  /* Primary Colors - Matching Logo */
+  --primary-color: #A0332D;
+  --secondary-color: #D4AF37;
 
   /* Text Colors */
   --text-color: #71747a;
